grid fix - tdc page wrap for builder

--- a/includes/less_files/page.less
+++ b/includes/less_files/page.less
@@ -3,21 +3,12 @@
 */
 .td-main-page-wrap {
   padding: 30px 0;
+}
 
-  .td-page-container {
-    max-width: none;
-
-    /* responsive portrait phone */
-    @media (max-width: @responsive_p_phone_max) {
-      padding-left: 0;
-      padding-right: 0;
-    }
-
-    //remove empty <p></p>
-    p:empty {
-      display: none;
-    }
-
+.tdc-content-wrap {
+  //remove empty <p></p>
+  p:empty {
+    display: none;
   }
 }
 
