--- a/style.css
+++ b/style.css
@@ -7329,17 +7329,7 @@ blockquote.pull-right:after {
 .td-main-page-wrap {
   padding: 30px 0;
 }
-.td-main-page-wrap .td-page-container {
-  max-width: none;
-  /* responsive portrait phone */
-}
-@media (max-width: 767px) {
-  .td-main-page-wrap .td-page-container {
-    padding-left: 0;
-    padding-right: 0;
-  }
-}
-.td-main-page-wrap .td-page-container p:empty {
+.tdc-content-wrap p:empty {
   display: none;
 }
 /*  ----------------------------------------------------------------------------
